2003-06-01  Ville Palo <vi64pa@kolumbus.fi>

	* SqlString.cs: added null checking
	
2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* SqlMoney.cs: little fixes and clean ups
	
2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* SqlInt16.cs: more checked fixes.
	* SqlInt64.cs: checked fixes.
	* SqlSingle.cs: checked fixes.
	
2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* SqlInt16.cs: little fixes.
	
2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* SqlDouble.cs: Some fixes. Mostly infinity checks
	* SqlSingle.cs: tiny fixes.
	* SqlInt64.cs: checked fix.
	
2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* ChangeLog: Added this.
	* SqlByte.cs: Fixed checked parts
	
